<resources>
    <string name="app_name">迷你喜马拉雅</string>
    <string name="subscription">订阅</string>
    <string name="history">历史</string>
    <string name="albumImageView">专辑图像</string>
    <string name="alum_title">标题</string>
    <string name="albumDesc">描述</string>
    <string name="album_play">播放量</string>
    <string name="album_track">收看量</string>
    <string name="recommend_error">网络错误，请点击重试</string>
    <string name="recommend_loading">正在玩命加载中...</string>
    <string name="recommend_empty">呜呜~ 没有内容哦！</string>
    <string name="album_subscribe">+ 订阅</string>
    <string name="album_player_playing">点击播放</string>
    <string name="album_player_pause">点击播放</string>
    <string name="album_item_select">选集</string>
    <string name="play_mode_order">顺序播放</string>
    <string name="play_mode_order_loop">列表循环</string>
    <string name="play_mode_single">单曲播放</string>
    <string name="play_mode_single_loop">单曲循环</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_list_sort_ascending">顺序</string>
    <string name="play_list_sort_descending">逆序</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入专辑关键字</string>


    <string-array name="indicate_title">
        <item>推荐</item>
        <item>订阅</item>
        <item>历史</item>
    </string-array>

</resources>
