<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/shape_album_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.jupiter.miniximalaya.views.RoundRectImageView
        android:id="@+id/iv_album_cover"
        android:scaleType="fitXY"
        android:layout_width="68dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/albumImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_album_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/iv_album_cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="3dp"
        android:text="@string/alum_title"/>

    <TextView
        android:id="@+id/tv_album_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="12sp"
        android:layout_marginStart="84dp"
        app:layout_constraintStart_toEndOf="@id/iv_album_cover"
        app:layout_constraintTop_toBottomOf="@id/tv_album_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/albumDesc"/>

    <ImageView
        android:id="@+id/iv_album_play"
        android:layout_width="4dp"
        android:layout_height="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:src="@mipmap/play_info_icon"
        android:contentDescription="@string/album_play"
        app:layout_constraintStart_toEndOf="@id/iv_album_cover"
        app:layout_constraintTop_toBottomOf="@id/tv_album_desc"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_album_play_count"
        android:layout_width="45dp"
        android:layout_height="10dp"
        android:textSize="7sp"
        android:textColor="#848484"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@id/tv_album_desc"
        app:layout_constraintStart_toEndOf="@id/iv_album_play"
        android:text="@string/album_play" />

    <ImageView
        android:id="@+id/iv_album_track"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:src="@mipmap/ic_sound"
        android:layout_marginStart="29dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/album_track"
        app:layout_constraintTop_toBottomOf="@id/tv_album_desc"
        app:layout_constraintStart_toEndOf="@id/tv_album_play_count"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_album_track_count"
        android:layout_width="45dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_album_desc"
        app:layout_constraintStart_toEndOf="@id/iv_album_track"
        android:textSize="7sp"
        android:textColor="#848484"
        android:layout_marginStart="2dp"
        android:layout_marginTop="11dp"
        android:text="@string/album_track" />

</androidx.constraintlayout.widget.ConstraintLayout>