<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/white"
    tools:context=".AlbumDetailActivity">

    <ImageView
        android:id="@+id/iv_album_large_cover"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <com.jupiter.miniximalaya.views.RoundRectImageView
        android:id="@+id/iv_album_small_cover"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginStart="10dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_album_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="这是标题"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_album_small_cover" />

    <TextView
        android:id="@+id/tv_album_item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="这是作者"
        android:textColor="#979797"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_album_item_title"
        app:layout_constraintStart_toEndOf="@id/iv_album_small_cover" />

    <TextView
        android:id="@+id/tv_subscribe"
        android:layout_width="75dp"
        android:layout_height="33dp"
        android:text="@string/album_subscribe"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/shape_album_subscribe_bg"
        app:layout_constraintTop_toBottomOf="@id/iv_album_large_cover"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="498dp" />

    <TextView
        android:id="@+id/tv_album_item_play_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#EBE8E8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subscribe"/>

    <ImageView
        android:id="@+id/iv_album_item_player"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/play_icon"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_album_item_play_container"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/id_album_player_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:text="@string/album_player_playing"
        app:layout_constraintStart_toEndOf="@id/iv_album_item_player"
        app:layout_constraintTop_toTopOf="@id/tv_album_item_play_container" />

    <ImageView
        android:id="@+id/album_item_select"
        android:layout_width="20dp"
        android:layout_height="10dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/arrow_icon"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@id/tv_album_item_play_container"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:text="@string/album_item_select"
        app:layout_constraintEnd_toStartOf="@id/album_item_select"
        app:layout_constraintTop_toTopOf="@id/tv_album_item_play_container" />


    <FrameLayout
        android:id="@+id/fl_album_detail_info"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_album_item_play_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>